6주차 워크북 실습 (QueryDSL)

--- a/build.gradle
+++ b/build.gradle
@@ -4,35 +4,95 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
+// 프로젝트 기본 정보
 group = 'umc'
 version = '0.0.1-SNAPSHOT'
 
+// 자바 버전 설정
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(17)
 	}
 }
 
+// 의존성 구성
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	querydsl { }
 }
 
 repositories {
 	mavenCentral()
 }
 
+// 의존성 관리
+ext {
+	querydslVersion = '5.1.0'
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// Lombok
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// MySQL Driver
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	// ✅ QueryDSL (5.1.0)
+	implementation "com.querydsl:querydsl-jpa:$querydslVersion:jakarta"
+	annotationProcessor "com.querydsl:querydsl-apt:$querydslVersion:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	// 테스트 관련 의존성
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+// QueryDSL 설정부
+def querydslDir = file("src/main/generated")
+
+sourceSets {
+	main {
+		java {
+			srcDirs += querydslDir
+		}
+	}
+}
+
+// Q 클래스 중복 생성 방지 및 자동 생성
+tasks.named('compileJava') {
+	doFirst {
+		if (querydslDir.exists()) {
+			querydslDir.deleteDir() // Q 클래스 중복 생성 방지
+		}
+		querydslDir.mkdirs()
+	}
+}
+
+tasks.register("compileQuerydsl", JavaCompile) {
+	group = "build"
+	description = "Generates the QueryDSL Q-types"
+	source = sourceSets.main.java
+	destinationDirectory = querydslDir
+	classpath = sourceSets.main.compileClasspath
+	options.annotationProcessorPath = configurations.annotationProcessor
+	options.compilerArgs = [
+			'-proc:only',
+			'-processor', 'com.querydsl.apt.jpa.JPAAnnotationProcessor'
+	]
+}
+
+// compileJava는 항상 compileQuerydsl 이후에 실행
+compileJava {
+	dependsOn compileQuerydsl
 }
